<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AccountsReceivable"
            android:icon="@drawable/cxc"
            android:title="@string/navdrawer_AccountsReceivable" />
        <item
            android:id="@+id/nav_PaidAccounts"
            android:icon="@drawable/cp"
            android:title="@string/navdrawer_PaidAccounts" />
        <item
            android:id="@+id/nav_ClientsOnCredit"
            android:icon="@drawable/credit"
            android:title="@string/navdrawer_ClientsOnCredit" />
        <item
            android:id="@+id/nav_NewClients"
            android:icon="@drawable/newuser"
            android:title="@string/navdrawer_NewClients" />
        <item
            android:id="@+id/nav_ProvidersDVI"
            android:icon="@drawable/dvi"
            android:title="@string/navdrawer_ProvidersDVI" />
        <item
            android:id="@+id/nav_ListProducts"
            android:icon="@drawable/box2"
            android:title="@string/navdrawer_ListProducts" />
        <item
            android:id="@+id/nav_ImportWeb"
            android:icon="@drawable/flechas"
            android:title="@string/navdrawer_ImportWEB" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_accounts_bank"
                android:icon="@drawable/bank"
                android:title="@string/navdrawer_share_accounts" />
            <item
                android:id="@+id/nav_send_contact"
                android:icon="@drawable/contact_card"
                android:title="@string/navdrawer_share_contacts" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/navdrawer_share" />
        </menu>
    </item>

    <item android:title="Configuracion">
        <menu>
            <item
                android:id="@+id/nav_Configuration"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navdrawer_Configuration" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navdrawer_contact" />
        </menu>
    </item>

</menu>
