<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitleModalPerformInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/navdrawer_PerformInventory"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/toggleButton_daily"
            android:textOff="@string/toggleButton_daily"
            android:textOn="@string/toggleButton_daily" />

        <ToggleButton
            android:id="@+id/toggleButtonMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/toggleButton_monthly"
            android:textOff="@string/toggleButton_monthly"
            android:textOn="@string/toggleButton_monthly" />

        <ToggleButton
            android:id="@+id/toggleButtonFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/toggleButton_full"
            android:textOff="@string/toggleButton_full"
            android:textOn="@string/toggleButton_full" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerAudit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/colorButton"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="8dp"
        android:text="@string/modal_search_head" />

</LinearLayout>