<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henryruiz.manejoalmacenmantis.CheckPriceListFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/navdrawer_ListProducts"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/percentage"
                    android:inputType="number"
                    android:text="0" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email01"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etClase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Class"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/List"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:fab_addButtonColorNormal="?attr/colorPrimary"
        app:fab_addButtonPlusIconColor="@color/white"
        app:fab_expandDirection="up"
        app:fab_labelStyle="@style/Etiquetas"
        app:layout_anchorGravity="center_vertical|right">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/accion_browser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorPrimary"
            app:fab_icon="@android:drawable/ic_menu_search"
            app:fab_size="mini"
            app:fab_title="@string/modal_search_head" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/accion_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorPrimary"
            app:fab_icon="@android:drawable/ic_dialog_email"
            app:fab_size="mini"
            app:fab_title="@string/Login_buttonSent" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
